--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,99 @@
-
+@import "./variables.scss";
+@import "./fonts.scss";
 @import "./global.scss";
+
+.reviews {
+  padding: 130px 0;
+  height: 100vh;
+  &__title {
+    font-size: 20px;
+    line-height: 27px;
+  }
+  &__check {
+    width: 100%;
+    display: flex;
+    padding: 35px 0;
+    margin: 25px 0;
+    background-color: #f7f7f7;
+  }
+  &__date {
+    margin-top: 10px;
+    font-size: 14px;
+    color: $text-color;
+  }
+}
+.table {
+  &__header {
+    width: 100%;
+    color: $text-color;
+    border: 1px solid #F2F2F2;
+    display: flex;
+    align-items: center;
+    min-height: 40px;
+  }
+  &__main {
+    display: flex;
+    margin-top: 15px;
+    font-size: 16px;
+  }
+  &__col {
+    &:first-child {
+      margin-left: 25px;
+    }
+    &:last-child {
+      margin-left: 25px;
+    }
+  }
+}
+.col-1 {
+  flex-basis: 10%;
+}
+
+.col-2 {
+  flex-basis: 20%;
+}
+.col-3 {
+  flex-basis: 40%;
+}
+.col-4 {
+  flex-basis: 13%;
+}
+
+.col-5 {
+  flex-basis: 17%;
+}
+
+.product {
+  &__photo {
+    width: 50px;
+  }
+  &__name {
+    max-width: 175px;
+  }
+  &__reviews {
+    max-width: 400px;
+  }
+  &__assessment {
+    color: $text-color;
+    display: flex;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    & div {
+      margin-right: 15px;
+    }
+    & span {
+      font-weight: bold;
+    }
+  }
+}
+.stars-rating {
+  display: flex;
+  align-items: center;
+}
+.live-rating {
+  margin-left: 10px;
+  color: $text-color;
+  font-weight: bold;
+  font-size: 14px;
+}
